--- a/default/commands/transactions.yml
+++ b/default/commands/transactions.yml
@@ -23,7 +23,7 @@ types:
   raffle: "lorifa"
   garticosTransfer: "transferência de garticos"
   background: "compras de background"
-  sparklypower: "SparklyPower"
+  sparklypower: "SparklyPower (mc.sparklypower.net)"
   inactiveDailyTax: "taxa de inatividade da conta no daily"
   stocks: "Loritta's Home Broker"
   guessNumber: "apostas de adivinhar números"
