--- a/default/commands/raffle.yml
+++ b/default/commands/raffle.yml
@@ -9,7 +9,7 @@ examples:
 - "comprar 100 |-| Compra cem tickets na rifa, quantos mais tickets, mais a chance de você ganhar!"
 lastWinner: "Último ganhador: **`{0}` ({1} Sonhos)**"
 notEnoughMoney: "Você precisa ter **+{0} Sonhos** para poder comprar {1} ticket{2}!"
-resultsIn: "Resultado irá sair daqui a **{0}**!"
+resultsIn: "Resultado irá sair em **{0}**!"
 usersParticipating: "Pessoas participando: **{0} Pessoas**"
 wantMoreChances: "Querendo mais chances de ganhar? Que tal comprar outro ticket? \U0001f609 `{0}rifa comprar [quantidade]`"
 youBoughtAnTicket: "Você comprou {0} ticket{1} por **{2} Sonhos**! Agora é só sentar e relaxar até o resultado da rifa sair!"
