--- a/default/items.yml
+++ b/default/items.yml
@@ -821,3 +821,6 @@ backgrounds:
   amongUsSkyBridge:
     title: "Sky Bridge"
     description: "Anyone can be the impostor."
+  halloweenIsHere:
+    title: "O Halloween Chegou"
+    description: "Chegou o Halloween! Prepare suas fantasias e abóboras e vamos pedir doces."
