--- a/default/commands/cortesflow.yml
+++ b/default/commands/cortesflow.yml
@@ -17,3 +17,5 @@ howToUseExample: "{0}cortesflow FundoDaThumbnail Texto aqui"
 thumbnailSelection: "`{0}` [\\[fonte\\]]({1})"
 unknownType: "Tipo de fundo para a thumbnail desconhecido! Para ver a lista de tipos suportados use `{0}cortesflow`"
 youNeedToAddText: "A não ser se você deseja uma thumbnail vazia... Você precisa colocar o texto que você deseja que apareça na thumbnail!"
+selectThumbnail: "A thumbnail que será utilizada"
+selectText: "O texto que irá aparecer na thumbnail... Salve salve família"
