--- a/default/commands/ratewaifu.yml
+++ b/default/commands/ratewaifu.yml
@@ -56,3 +56,4 @@ noteTatsumaki:
 noteUnbelievaBoat:
 - "Muitas pessoas amam ele devido ao sistema extremamente extenso de economia dele, e se eu não desse 10/10 para ele, meu espírito capitalista iria ficar boladex..."
 result: "Eu dou nota **{0}** para `{1}`! **{2}**"
+selectWaifu: "O nome da sua waifu, já que você precisa de validação externa para gostar dela"
