--- a/default/commands/sam.yml
+++ b/default/commands/sam.yml
@@ -1,1 +1,5 @@
 description: "kk eae men o SAM é brabo, coloque o selo da South America Memes em uma imagem!"
+selectLogo: "Estilo do Logo da South America Memes"
+sam1: "Logo clássico"
+sam2: "Logo cópia-barata"
+sam3: "Logo sarrada no ar"
