--- a/default/commands/anagram.yml
+++ b/default/commands/anagram.yml
@@ -5,3 +5,5 @@ examples:
 - "Asriel Dreemurr |-| Cria um anagrama usando a frase \"Asriel Dreemurr\""
 result: "**O seu anagrama é...** `{0}`"
 stats: "A palavra `{0}` possui **{1} anagramas diferentes**!"
+options:
+  text: "O texto que será transformado em um anagrama"
