--- a/default/commands/avatar.yml
+++ b/default/commands/avatar.yml
@@ -8,3 +8,6 @@ gabrielaCute: "Sim, a Gabriela também é fofa. As vezes tenho até inveja do st
 lorittaCute: "Sim, eu sei que eu sou muito fofa!"
 pantufaCute: "Sim, a Pantufinha também é fofinha. Olha que cute cute iti malia"
 polluxCute: "Sim, a Pollux também é fofis. Sempre juntas comemorando as nossas conquistas!"
+
+options:
+  user: "O usuário que você deseja roubar... quer dizer, ver, o avatar (*/ω＼*)"
