--- a/default/commands/vemdezap.yml
+++ b/default/commands/vemdezap.yml
@@ -15,3 +15,4 @@ moodSassy: "Tarado"
 moodSick: "Doente"
 whatIsTheLevel: "Qual será a intensidade do seu zap?"
 whatIsTheMood: "Qual será o seu humor do zap?"
+selectText: "Texto que será zap zapificado"
