--- a/default/commands/cortesflow.yml
+++ b/default/commands/cortesflow.yml
@@ -19,3 +19,25 @@ unknownType: "Tipo de fundo para a thumbnail desconhecido! Para ver a lista de t
 youNeedToAddText: "A não ser se você deseja uma thumbnail vazia... Você precisa colocar o texto que você deseja que apareça na thumbnail!"
 selectThumbnail: "A thumbnail que será utilizada"
 selectText: "O texto que irá aparecer na thumbnail... Salve salve família"
+
+thumbnails:
+  arthurBenozzatiSmile: "Arthur Benozzati Sorrindo"
+  douglasLaughing: "Douglas Mesquita Rindo"
+  douglasPointing: "Douglas Mesquita Apontando"
+  douglasPray: "Douglas Mesquita Rezando"
+  gaulesSad: "Gaulês Triste"
+  igorAngry: "Igor3k Bravo"
+  igorNaked: "Igor3k Nu 😳"
+  igorPointing: "Igor3k Apontando"
+  julioCocieloEyes: "Júlio Cocielo com Olhos Arregalados"
+  lucasInutilismoExalted: "Lucas Inutilismo Exaltado"
+  metafandoBadge: "Vitor Metaforando com um Distintivo"
+  metaforandoSurprised: "Vitor Metaforando Surpreso"
+  miticoSucc: "Mitico Succ 🥵"
+  monarkDiscussion: "Monark discutindo"
+  monarkSmoking: "Monark fazendo Fumaça"
+  monarkStop: "Monark Gesticulando para Parar"
+  peterJordanActionFigure: "Peter Jordan com uma Action Figure"
+  poladofulDiscussion: "Poladoful Disctuindo"
+  ratoBorrachudoDisappointed: "Rato Borrachudo Desapontado"
+  ratoBorrachudoNoGlasses: "Rato Borrachudo Sem Óculos"
