Whoops, the currency should be capitalized

--- a/default/commands/money.yml
+++ b/default/commands/money.yml
@@ -15,7 +15,7 @@ currencies:
   brl: "Real brasileiro (BRL)"
   jpy: "Iene japonês (JPY)"
   bgn: "Lev búlgaro (BGN)"
-  czk: "Coroa tcheca (czk)"
+  czk: "Coroa tcheca (CZK)"
   dkk: "Coroa dinamarquesa (DKK)"
   gbp: "Libra esterlina (GBP)"
   huf: "Florim húngaro (HUF)"
