Add locales related to the dicio command

--- a/default/commands/cortesflow.yml
+++ b/default/commands/cortesflow.yml
@@ -31,7 +31,7 @@ thumbnails:
   igorPointing: "Igor3k Apontando"
   julioCocieloEyes: "Júlio Cocielo com Olhos Arregalados"
   lucasInutilismoExalted: "Lucas Inutilismo Exaltado"
-  metaforandoSurprised: "Vitor Metaforando com um Distintivo"
+  metaforandoBadge: "Vitor Metaforando com um Distintivo"
   metaforandoSurprised: "Vitor Metaforando Surpreso"
   miticoSucc: "Mitico Succ 🥵"
   monarkDiscussion: "Monark discutindo"
