--- a/en-us/commands/morse.yml
+++ b/en-us/commands/morse.yml
@@ -1,7 +1,7 @@
 ---
 description: "Encode/Decode a morse code message"
 examples:
-  - "Lorrita |-| Converts \"Loritta\" to morse code"
+  - "Loritta |-| Converts \"Loritta\" to morse code"
   - ".-.. --- .-. .. / ..-. --- --- ..-. |-| Converts morse code to text"
 failUnknownCharacters: "I was unable to convert your message to morse code... Maybe you just put characters that don't exist in morse code!"
 fromTo: "Text to morse"
