--- a/en-us/commands/pay.yml
+++ b/en-us/commands/pay.yml
@@ -34,6 +34,6 @@ randomQuirkyRichMessages:
   - "I'm not jealous of these sonhos, if I wanted I could give the same amount to myself!"
 selfAccountIsTooNew: "Wait a second, your account is too new! To be able to transfer sonhos you need to wait {0} days before you can start transferring sonhos."
 selfAccountNeedsToGetDaily: "Looks like you haven't got your today's daily, you can only send sonhos after you get your daily. What about getting it right now? {0}"
-sellDisallowedWarning: "**Don't forget:** It is prohibited to trade products that have real values ​​(Nitro, real money, invites, illegal content / NSFW, etc.) for dreams, you will be banned from using Loritta if you do! See all rules at <{0}>. Don't forget that when you accept the transaction, you won't be able to ask for your dreams back and the team will not help you get them back, so just send dreams to trusted people!"
+sellDisallowedWarning: "**Don't forget:** It is prohibited to trade products that have real values ​​(Nitro, real money, invites, illegal content / NSFW, etc.) for Sonhos, you will be banned from using Loritta if you do! See all rules at <{0}>. Don't forget that when you accept the transaction, you won't be able to ask for your Sonhos back and the team will not help you get them back, so just send Sonhos to trusted people!"
 transitionComplete: "Transaction completed! {0} received **{1} {2}**!"
 youAreGoingToTransfer: "You're about to transfer {0} sonhos to {1}!{2}"
