--- a/default/commands/morse.yml
+++ b/default/commands/morse.yml
@@ -2,10 +2,11 @@ description: "Codifica/Decodifica uma mensagem em código morse"
 examples:
 - "Loritta |-| Converte \"Loritta\" para código morse"
 - ".-.. --- .-. .. / ..-. --- --- ..-.  |-| Converte de código morse para texto"
-failUnknownCharacters: "Eu não consegui transformar a sua mensagem para código morse... Talvez você tenha colocado apenas caracteres que não existem em código morse!"
+
 fromTo: "Texto para Morse"
 toFrom: "Morse para Texto"
-fail: "Eu não consegui transformar a sua mensagem para código morse... Talvez você tenha colocado apenas caracteres que não existem em código morse!"
+failTo: "Eu não consegui transformar a sua mensagem para código morse... Talvez você tenha colocado apenas caracteres que não existem em código morse!"
+failFrom: "Eu não consegui transformar a sua mensagem do código morse... Talvez você tenha colocado apenas caracteres inválidos em código morse!"
 
 options:
   fromMorse: "Código Morse que será decodificado"
