Change more strings related to the outdated command message

--- a/default/commands.yml
+++ b/default/commands.yml
@@ -43,11 +43,11 @@ commands:
     description:
     - "Este comando está disponível via Slash Commands (comandos com `/`), caso queria experimentar, use **`/{0}`**! Comandos que não usam slash irão desaparecer em **Abril de 2022**, então é melhor ir se acostumando com eles! {4}"
     - ""
-    - "Aproveitando a migração, **os comandos foram melhorados**, as versões dos comandos em Slash Commands são superiores as versões originais, então você não terá nada a perder usando meus slash commands em vez das versões originais! {5}"
+    - "As versões dos comandos em Slash Commands **são superiores as versões originais**, então você não terá nada a perder usando meus slash commands em vez das versões originais! {5}"
     - ""
-    - "Até Abril **todos os bots** serão **obrigados** a migrarem para Slash Commands, já que o Discord irá remover acesso do conteúdo de mensagens para comandos... e é por isso que estou mudando meus comandos para Slash Commands! Ainda não migrei todos, mas espero que até Abril todos estejam migrados! {6}"
+    - "Até Abril **todos os bots** serão **obrigados** a migrarem para Slash Commands, e é por isso que estou mudando meus comandos! Ainda nem todos os meus comandos estão disponíveis via Slash Commands, mas espero que até Abril eu consiga migrar todos! {6}"
     - ""
-    - "Se os meus slash commands não estão aparecendo no seu servidor, [tente me autorizar a criar slash commands no seu servidor]({1}), verifique se o seu cargo possui permissão para \"Usar comandos de aplicativo\", verifique se a opção \"Use comandos de barra e preveja emojis, menções e sintaxe de markdown enquanto digita\" está ativada e verifique se o seu Discord está atualizado! Caso você precise de ajuda, entre no [meu servidor de suporte]({2})! {7}"
+    - "Se os meus slash commands não estão aparecendo no seu servidor, [me autorize a criar slash commands no seu servidor]({1}), verifique se o seu cargo possui permissão para \"Usar comandos de aplicativo\", verifique se a opção \"Use comandos de barra\" está ativada nas suas configurações e verifique se o seu Discord está atualizado! Caso você precise de ajuda, entre no [meu servidor de suporte]({2})! {7}"
     - ""
     - "Se você deseja saber mais sobre o acesso de conteúdo de mensagens e o motivo de estar fazendo esta mudança, recomendo ler o [Anúncio do Discord]({3})! {8}"
   discordUrl: "https://support-dev.discord.com/hc/en-us/articles/4404772028055-Message-Content-Access-Deprecation-for-Verified-Bots"
