--- a/en/commands/server.yml
+++ b/en/commands/server.yml
@@ -12,44 +12,44 @@ splash:
   openSplashInBrowser: "Open invite background in browser" # Used in a button, when clicking the button, Discord opens the server's splash in the user's browser
 channel:
   description: "Mostra informações de um canal de texto"
-  infoFrom: "{personTippingHand} Informações de {channelName}"
-  channelMention: "{smallBlueDiamond} Menção do canal"
-  channelId: "{computer} ID do canal"
+  infoFrom: "Informações de {channelName}"
+  channelMention: "Menção do canal"
+  channelId: "ID do canal"
   voice:
-    bitRate: "{microphone2} Taxa de bits"
-    userLimit: "{bustsInSilhouette} Limite de usuários"
-    region: "{earthAmericas} Região"
+    bitRate: "Taxa de bits"
+    userLimit: "Limite de usuários"
+    region: "Região"
   thread:
-    messageCount: "{pageFacingUp} Mensagens"
-    memberCount: "{bustsInSilhouette} Membros no canal"
-    archived: "{dividers} Arquivado"
-    locked: "{lock} Trancado"
+    messageCount: "Mensagens"
+    memberCount: "Membros no canal"
+    archived: "Arquivado"
+    locked: "Trancado"
   text:
-    slowMode: "{snail} Modo lento"
-  position: "{trophy} Posição"
-  createdAt: "{dateEmote} Criado em"
+    slowMode: "Modo lento"
+  position: "Posição"
+  createdAt: "Criado em"
   options:
     channel: "Um canal para mostrar informações sobre ele"
 invite:
   description: "Mostra informações sobre um convite do servidor"
   doesntExists: "Infelizmente não consegui encontrar nenhum convite parecido com `{inviteArgument}`"
-  serverMembers: "{bustsInSilhouette} Membros"
-  membersPresence: "{personTippingHand} Online: {onlineMembers}\n{sleeping} Offline: {offlineMembers}"
-  invitationChannel: "{speakingHead} Canal de convite"
-  whoInvited: "{wave} Quem convidou"
-  guildFeatures: "{sparkles} Recursos do servidor"
+  serverMembers: "Membros"
+  membersPresence: "Online: {onlineMembers}\n{sleeping} Offline: {offlineMembers}"
+  invitationChannel: "Canal de convite"
+  whoInvited: "Quem convidou"
+  guildFeatures: "Recursos do servidor"
   options:
     invite: "Um convite de algum servidor que você deseja ver informações"
 role:
   description: "Mostra informações de um cargo no servidor"
-  mention: "{eyes} Menção"
-  roleId: "{computer} ID do cargo"
-  hoisted: "{eyes} Exibir separadamente"
-  managed: "{botEmoji} Integração"
-  mentionable: "{loriPing} Mencionável"
-  color: "{art} Cor"
-  createdAt: "{dateEmoji} Criado em"
-  permissions: "{shield} Permissões"
+  mention: "Menção"
+  roleId: "ID do cargo"
+  hoisted: "Exibir separadamente"
+  managed: "Integração"
+  mentionable: "Mencionável"
+  color: "Cor"
+  createdAt: "Criado em"
+  permissions: "Permissões"
   openRoleIconInBrowser: "Abrir ícone do cargo no navegador"
   options:
     role: "Um cargo que você deseja ver informações"
