--- a/en/commands/server.yml
+++ b/en/commands/server.yml
@@ -12,47 +12,47 @@ splash:
   openSplashInBrowser: "Open invite background in browser" # Used in a button, when clicking the button, Discord opens the server's splash in the user's browser
 channel:
   info:
-    description: "Mostra informações de um canal do servidor"
-    infoFrom: "Informações de {channelName}"
-    channelMention: "Menção do canal"
-    channelId: "ID do canal"
+    description: "Shows the information of an server's channel"
+    infoFrom: "Information about {channelName}"
+    channelMention: "Channel Mention"
+    channelId: "Channel ID"
     voice:
-      bitRate: "Taxa de bits"
-      userLimit: "Limite de usuários"
-      region: "Região"
+      bitRate: "Bit Rate"
+      userLimit: "User Limit"
+      region: "Region"
     thread:
-      messageCount: "Mensagens"
-      memberCount: "Membros no canal"
-      archived: "Arquivado"
-      locked: "Trancado"
+      messageCount: "Messages"
+      memberCount: "Members in the channel"
+      archived: "Archived"
+      locked: "Locked"
     text:
-      slowMode: "Modo lento"
-      slowModeSeconds: "{timeInSeconds, plural, one {# segundo} other {# segundos}}"
-    position: "Posição"
-    createdAt: "Criado em"
+      slowMode: "Slow Mode"
+      slowModeSeconds: "{timeInSeconds, plural, one {# second} other {# seconds}}"
+    position: "Position"
+    createdAt: "Created at"
     options:
-      channel: "Um canal para mostrar informações sobre ele"
+      channel: "The channel that you want to know its information"
 invite:
-  description: "Mostra informações sobre um convite do servidor"
-  doesntExists: "Infelizmente não consegui encontrar nenhum convite parecido com `{inviteArgument}`"
-  serverMembers: "Membros"
+  description: "Shows information about a server invite"
+  doesntExists: "Unfortunately I wasn't able to find a invite from `{inviteArgument}`... Or maybe I'm banned from that server! Hmpf, why would someone ban me??"
+  serverMembers: "Members"
   membersPresence: "Online: {onlineMembers}\n{sleeping} Offline: {offlineMembers}"
-  invitationChannel: "Canal de convite"
-  whoInvited: "Quem convidou"
-  guildFeatures: "Recursos do servidor"
+  invitationChannel: "Invitation Channel"
+  whoInvited: "Who Invited"
+  guildFeatures: "Server Features"
   options:
-    invite: "Um convite de algum servidor que você deseja ver informações"
+    invite: "The channel that you want to know its information"
 role:
   info:
-    description: "Mostra informações de um cargo no servidor"
-    mention: "Menção"
-    roleId: "ID do cargo"
-    hoisted: "Exibir separadamente"
-    managed: "Integração"
-    mentionable: "Mencionável"
-    color: "Cor"
-    createdAt: "Criado em"
-    permissions: "Permissões"
-    openRoleIconInBrowser: "Abrir ícone do cargo no navegador"
+    description: "Shows the information of an server's role"
+    mention: "Mention"
+    roleId: "Role ID"
+    hoisted: "Hoisted"
+    managed: "Managed"
+    mentionable: "Mentionable"
+    color: "Color"
+    createdAt: "Created at"
+    permissions: "Permissions"
+    openRoleIconInBrowser: "Open role icon in browser"
     options:
-      role: "Um cargo que você deseja ver informações"
+      role: "The role that you want to know its information"
